Update a mini fault when command a script in customer.js file

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
   <script src="./HL_Customer/services/cartAPI.js"></script>
   <!-- <script src="./HL_Customer/model/cartItem.js"></script> -->
   <script src="./HL_Customer/controller/customer_local.js"></script>
-  <script src="./HL_Customer/controller/customer.js"></script>
+  <!-- <script src="./HL_Customer/controller/customer.js"></script> -->
 </body>
 
 </html>
