--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
   </script> -->
 
   <!-- Block Watching Source Code  -->
+  <!-- command -->
   <!-- <script src="./Asset/JS/res.js"></script> -->
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
