Done, fix search

--- a/index.html
+++ b/index.html
@@ -367,7 +367,8 @@
   <script src="./Asset/JS/productGetPrice.js"></script>
   <script src="./HL_Customer/services/cartAPI.js"></script>
   <!-- <script src="./HL_Customer/model/cartItem.js"></script> -->
-
+  
+<script src="./HL_Administration/controllers/sortTable.js"></script>
   <!-- Data giỏ hàng được luu dưới local hoặc API -->
   <script src="./HL_Customer/controller/customer_local.js"></script>
   <!-- <script src="./HL_Customer/controller/customer.js"></script> -->
