--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       " name="" id="productType" aria-label="Default select example"
         onchange="chooseProducts()">
         <option value="0">Chọn sản phẩm</option>
-        <option value="1">Vàng nhẫn</option>
+        <option value="1">Vàng 24k</option>
         <option value="2">Vàng vỉ SJC</option>
         <option value="3">Vàng vỉ Thần tài</option>
       </select>
