--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
   <!-- Block Watching Source Code  -->
   <!-- command -->
-  <!-- <script src="./Asset/JS/res.js"></script> -->
+  <script src="./Asset/JS/res.js"></script>
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <script src="https://code.highcharts.com/modules/series-label.js"></script>
