--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
   <!-- PRODUCT  -->
   <div id="productPrice" class="product container py-5">
     <div class="product__content form-group">
-      <select style="font-size: 18px; border-radius: 5px;;" class="form-select mb-5 testAli bg-warning
+      <select style="font-size: 18px; border-radius: 5px;; height: 35px" class="form-select mb-5 testAli bg-warning
       " name="" id="productType" aria-label="Default select example"
         onchange="chooseProducts()">
-        <option value="0">Chọn sản phẩm</option>
+        <option selected value="0">Chọn sản phẩm</option>
         <option value="1">Vàng 24k</option>
         <option value="2">Vàng vỉ SJC</option>
         <option value="3">Vàng vỉ Thần tài</option>
